# Python

Class Assignments/Countdown Timer/: main.py
Class Assignments/Guess the Number Game_user/: main.py
Class Assignments/Guess_the_Number_Game_computer/: main.py
Class Assignments/Hangman/: hangman.py  words.py
Class Assignments/Password Generator/: main.py
Class Assignments/Python website/: main.py
Class Assignments/Rock_paper_scissors/: main.py
Class Assignments/Streamlit BMI Calculator/: main.py
OOP/01_Using_Self/: main.py
OOP/02_Using_CLS/: main.py
OOP/03_Public_Variables_and_Methods/: main.py
OOP/04_Class_Variables_and_Class_Methods/: main.py
OOP/05_Static_Variables_and_Static_Methods/: main.py
OOP/06_Constructors_and_Destructors/: mian.py
OOP/07_Access_Modifiers_Public_Private_and Protected/: main.py
OOP/08_The_super()_Function/: main.py
OOP/09_Abstract_Classes_and_Methods/: main.py
OOP/10_Instance_Methods/: main.py
OOP/11_Class_Methods/: main.py
OOP/12_Static_Methods/: main.py
OOP/13_Composition/: main.py
OOP/14_Aggregation/: main.py
OOP/15_Method_Resolution_Order_(MRO)/: main.py
OOP/16_Function_Decorators/: main.py
OOP/17_Class_Decorators/: main.py
OOP/18_Property_Decorators/: main.py
OOP/19_callable()/: main.py
OOP/20_Creating_a_Custom_Exception/: main.py
OOP/21_Make_a_Custom_Class_Iterable/: main.py
OOP/23_Practice/: main.py
OOP/24_dataclasses/: pyproject.toml
OOP/24_dataclasses/src/24_dataclasses/: __init__.py  main.py  university.py
Personal library manager/: index.py
Unit converter/: unit.py
(+59 files in other folders)
